# executor-account-resolver-svm

./: Anchor.toml  Cargo.toml  README.md  package.json
.cspell/: custom-dictionary.txt
.github/workflows/: format.yml  svm.yml
modules/executor-account-resolver-svm/: Cargo.toml
modules/executor-account-resolver-svm/src/: lib.rs
programs/example-iterative-resolution/: Cargo.toml
programs/example-iterative-resolution/src/: lib.rs
programs/example-lookup-table-resolution/: Cargo.toml
programs/example-lookup-table-resolution/src/: lib.rs
programs/executor-account-resolver-svm-program/: Cargo.toml
programs/executor-account-resolver-svm-program/src/: lib.rs
programs/solana-account-resolver/: Cargo.toml
programs/solana-account-resolver/src/: lib.rs
tests/: example-iterative-executor-account-resolver.ts  example-lookup-table-resolution.ts  executor-account-resolver-svm-program.ts  solana-account-resolver.ts  utils.ts
