[package]
name = "executor-account-resolver-svm-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "executor_account_resolver_svm_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["interface-instructions"] }
executor-account-resolver-svm = { path = "../../modules/executor-account-resolver-svm" }
